--- a/Weather App UIKit/Info.plist
+++ b/Weather App UIKit/Info.plist
@@ -2,6 +2,14 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>WEATHER_API_KEY</key>
+	<string>79b57cc4d773c37a59e5790c23979016</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>This app need your location to provide best feature based on location</string>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>This app need your location to provide best feature based on location</string>
+	<key>CFBundleIdentifier</key>
+	<string>marais.demo.Weather-App-UIKit</string>
 	<key>UIApplicationSceneManifest</key>
 	<dict>
 		<key>UIApplicationSupportsMultipleScenes</key>
@@ -15,8 +23,6 @@
 					<string>Default Configuration</string>
 					<key>UISceneDelegateClassName</key>
 					<string>$(PRODUCT_MODULE_NAME).SceneDelegate</string>
-					<key>UISceneStoryboardFile</key>
-					<string>Main</string>
 				</dict>
 			</array>
 		</dict>
